--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile project(':library')
-//    compile project(':bottom-bar')
+    compile project(':bottom-bar')
     testCompile 'junit:junit:4.12'
 
     compile 'com.android.support:design:26.1.0'
